Fix assert message formatting https://bugs.webkit.org/show_bug.cgi?id=212591

Reviewed by Adrian Perez de Castro.

Fixes warning by gcc - lineParts.size() is size_t, %zu should be used.

* runtime/FuzzerPredictions.cpp:
(JSC::FuzzerPredictions::FuzzerPredictions):


Canonical link: https://commits.webkit.org/225459@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@262412 268f45cc-cd09-0410-ab3c-d52691b4dbfc